# RMTraining

./: readme.md
01/apple/: main.cpp
01/armor/: CMakeLists.txt  main.cpp
01/licence_plate/: CMakeLists.txt
02_03/calibration/: CMakeLists.txt  main.cpp
02_03/photo/: CMakeLists.txt  main.cpp
04/armor_position/: CMakeLists.txt  main.cpp
04/armor_position/hw3_t1/: big_armor_scale.hpp
04/kalman_filter/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h  main.cpp  predictions.txt
apple/: CMakeLists.txt  main.cpp
licence_plate/: detector.cpp  detector.h  main.cpp
